--- a/teste/estilos/style.css
+++ b/teste/estilos/style.css
@@ -3,7 +3,11 @@
     margin: 0;
     box-sizing: border-box;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: auto;
+}
+
+body {
+    border: 2px solid rgb(0, 187, 255);
+    min-height: 100vh;
 }
 
 /*header inicial*/
@@ -17,8 +21,10 @@ header h2 {
     color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
+    justify-content: start;
     padding: 10px;
-    height: 65px;
+    height: 75px;
+    width: 200px;
 }
 
 .inicio {
@@ -39,15 +45,22 @@ nav {
     justify-content: space-between;
     justify-content: start;
     background-color:   rgb(241, 226, 209);
-    max-width: 900px;
+    max-width: 1200px;
+    height: 75px;
     margin: 0px auto;
+}
+
+.welcome {
+    margin-top: 10px;
 }
 
 /*select*/
 
 #idiomas {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 70px;
+    margin-right: 70px;
+    height: 30px;
+    margin-top: 20px;
 }
 
 /*Aside*/
@@ -56,15 +69,53 @@ aside > ul > a {
     text-decoration: none;
 }
 
+
 aside > ul > a > li {
     border-bottom: 2px solid black;
-    max-width: 200px;
+    max-width: 100%;
     list-style: none;
     color: black;
+    height: 30px;
+}
+
+aside > ul > a > li:hover {
+    background-color: rgba(209, 159, 108, 0.537);
+    border-left: 1px solid orange;
 }
 
 aside {
     display: flex;
     flex-direction: column;
     justify-content: start;
+}
+
+/*img*/ 
+
+img {
+    width: 150px;
+    height: 150px;
+}
+
+/*main*/
+
+main {
+    background-color:rgb(255, 255, 255) ;
+    box-shadow:0px 2px 5px 0px ;
+    height: 670px;
+    width: 200px;
+}
+
+
+/*Container1*/
+
+.container1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
+    color: orange;
+}
+
+.container1 h3 {
+    margin-bottom: 20px;
 }
