--- a/6_EXPRESS/11_projeto/public/css/style.css
+++ b/6_EXPRESS/11_projeto/public/css/style.css
@@ -1,5 +1,7 @@
 body {
-    background-color: #dfdfdf;
+    background-color: #000000;
+    color: white;
     text-align: center;
     padding: 2em;
+    font-family: Arial, Helvetica, sans-serif;
 }
