--- a/6_EXPRESS/11_projeto/templates/index.html
+++ b/6_EXPRESS/11_projeto/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Título da página</title>
+    <title>Home</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <h1>Home Express! Atualização.</h1>
+    <h1>Essa é a sua home!</h1>
   </body>
 </html>
