--- a/7_TEMPLATE_ENGINE/4_condicionais/views/home.handlebars
+++ b/7_TEMPLATE_ENGINE/4_condicionais/views/home.handlebars
@@ -1,3 +1,7 @@
 <h1>Olá handlebars!</h1>
-<p>O nome do usuário é {{user.name}} {{user.surname}}, e ele tem {{user.age}}</p>
-<h2>{{palavra}}</h2>
+<p>O nome do usuário é {{user.name}} {{user.surname}} {{user.age}}</p>
+{{#if auth}}
+    <p>
+        Você está autenticando, <a href="/dashbord">clique aqui</a> para acessar a área de membros!
+    </p>
+{{/if}}
