--- a/7_TEMPLATE_ENGINE/5_else/views/home.handlebars
+++ b/7_TEMPLATE_ENGINE/5_else/views/home.handlebars
@@ -1,7 +1,12 @@
 <h1>Olá handlebars!</h1>
+{{#if approved}}
+    <p>Parabéns, o seu cadastro foi aprovado!</p>
+{{else}}
+    <p>O seu cadastro necessita de aprovação para acesso total do sistema!</p>
+{{/if}}
 <p>O nome do usuário é {{user.name}} {{user.surname}} {{user.age}}</p>
 {{#if auth}}
     <p>
-        Você está autenticando, <a href="/dashbord">clique aqui</a> para acessar a área de membros!
+        Você está autenticado, <a href="/dashbord">clique aqui</a> para acessar a área de membros!
     </p>
 {{/if}}
