--- a/7_TEMPLATE_ENGINE/6_estrutura_repeticao/views/dashbord.handlebars
+++ b/7_TEMPLATE_ENGINE/6_estrutura_repeticao/views/dashbord.handlebars
@@ -1,2 +1,7 @@
 <h1>Aba do usuário, clique abaixo para sair</h1>
-<a href="/">Sair</a>
+<a href="/">Voltar para página anterior</a>
+<ul>
+        {{#each items}}
+        <li>ID: {{this}}</li>
+        {{/each}}
+</ul>
