--- a/8_NODE_E_MYSQL/2_inserindo_dados/views/home.handlebars
+++ b/8_NODE_E_MYSQL/2_inserindo_dados/views/home.handlebars
@@ -1,1 +1,12 @@
-<h1>Meu projeto</h1>
+<h1>Cadastre o seu livro</h1>
+<form action="/books/insertbook" method="POST">
+    <div class="form-control">
+        <label for="title">Titulo:</label>
+        <input type="text" name="title" placeholder="Digite o título">
+    </div>
+    <div class="form-control">
+        <label for="Pagesqty">Número de páginas:</label>
+        <input type="number" name="pagesqty" placeholder="Número de páginas do livro">
+    </div>
+    <input type="submit" value="Cadastrar">
+</form>
