--- a/8_NODE_E_MYSQL/3_resgatar_dados/views/books.handlebars
+++ b/8_NODE_E_MYSQL/3_resgatar_dados/views/books.handlebars
@@ -1,5 +1,6 @@
 <h1>Livros disponíveis</h1>
 <div class="books-container">
+    <a href="/" class="add">Adicionar livro</a>
     {{#each books}}
         <div>
             #{{this.id}} - <span class="bold">{{this.title}}</span> - {{this.pageqty}} Páginas
