Construindo a navbar do projeto

--- a/8_NODE_E_MYSQL/4_regatando_individuais/views/books.handlebars
+++ b/8_NODE_E_MYSQL/4_regatando_individuais/views/books.handlebars
@@ -3,7 +3,7 @@
     <a href="/" class="add">Adicionar livro</a>
     {{#each books}}
         <div>
-            #{{this.id}} - <span class="bold">{{this.title}}</span> - {{this.pageqty}} Páginas
+            #{{this.id}} -<span class="bold"> <a href="/books/{{this.id}}">{{this.title}}</span></a> - {{this.pageqty}} Páginas
         </div>
     {{/each}}
 </div>
