--- a/8_NODE_E_MYSQL/4_regatando_individuais/public/css/style.css
+++ b/8_NODE_E_MYSQL/4_regatando_individuais/public/css/style.css
@@ -26,6 +26,18 @@ h1 {
     padding: 5px;
 }
 
+/*Navegação*/
+
+#navbar {
+    border-bottom: 1px solid #ccc;
+    padding: 1em;
+    margin-bottom: 1em;
+}
+
+#navbar ul {
+    display: flex;
+}
+
 /*BOOKS*/
 
 .books-container div {
