--- a/8_NODE_E_MYSQL/4_regatando_individuais/public/css/style.css
+++ b/8_NODE_E_MYSQL/4_regatando_individuais/public/css/style.css
@@ -1,5 +1,6 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
 }
 
 h1 {
@@ -36,6 +37,20 @@ h1 {
 
 #navbar ul {
     display: flex;
+    list-style: none;
+    margin: 0;
+}
+
+#navbar ul li {
+    margin-left: .5em;
+}
+
+#navbar ul li a {
+    text-decoration: none;
+    color: black;
+    border-radius: 10px;
+    padding: 5px;
+    border: 1px solid black;
 }
 
 /*BOOKS*/
@@ -56,4 +71,14 @@ h1 {
     color: black;
     padding: 5px;
     border-radius: 10px;
+}
+
+/* BOOK */
+
+#book-page {
+    padding: 2em;
+}
+
+#book-page .container{
+    text-align: center;
 }
