Trabalhando na parte de remoção dos livros.

--- a/8_NODE_E_MYSQL/7_excluindo_dados/public/css/style.css
+++ b/8_NODE_E_MYSQL/7_excluindo_dados/public/css/style.css
@@ -85,4 +85,10 @@ h1 {
 
 .actions {
     margin-top: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.actions a {
+    margin-right: 1em;
 }
