--- a/8_NODE_E_MYSQL/7_excluindo_dados/views/book.handlebars
+++ b/8_NODE_E_MYSQL/7_excluindo_dados/views/book.handlebars
@@ -5,7 +5,7 @@
         <p>Este livro tem {{book.pageqty}} páginas.</p>
         <div class="actions">
             <a href="/books/edit/{{book.id}}">Editar</a>
-            <form action="/books/remove/{{book.id}}">
+            <form action="/books/remove/{{book.id}}" method="POST">
                 <input type="submit" value="Remover">
             </form>
         </div>
