--- a/9_SEQUELIZE/5_resgatando_dados/public/css/style.css
+++ b/9_SEQUELIZE/5_resgatando_dados/public/css/style.css
@@ -80,10 +80,16 @@ h1 {
     border-radius: 5px;
     flex: 1 1 29%;
     max-width: 29%;
-    height: 75px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .item h2,
 .item p {
-    
+    margin-bottom: 0.8rem
+}
+
+.actions {
+    display: flex;
 }
