--- a/9_SEQUELIZE/10_add_relacionado/public/css/style.css
+++ b/9_SEQUELIZE/10_add_relacionado/public/css/style.css
@@ -118,3 +118,19 @@ h1 {
     color: #e31d31;
 }
 
+/*Endereço*/
+
+.adress-container {
+    max-width: 1000px;
+    margin: 1em auto;
+    padding-top: 1em;
+    border-top: 1px solid #ccc;
+}
+
+.adress-container {
+    margin-bottom: 1em;
+}
+
+.adress-container form {
+    width: 300px;
+}
