--- a/9_SEQUELIZE/10_add_relacionado/views/useredit.handlebars
+++ b/9_SEQUELIZE/10_add_relacionado/views/useredit.handlebars
@@ -21,7 +21,7 @@
 </form>
 <div class="adress-container">
     <h2>Endereços</h2>
-    <form action="/address/create">
+    <form action="/address/create" method="POST">
         <input type="hidden" name="UserId" value="{{user.id}}">
         <div class="form-control">
             <label for="street">
