--- a/9_SEQUELIZE/11_resgatando_relacionados/views/useredit.handlebars
+++ b/9_SEQUELIZE/11_resgatando_relacionados/views/useredit.handlebars
@@ -40,4 +40,10 @@
         </div>
         <input type="submit" value="Incluir endereço">
     </form>
+    <div class="address-list">
+        <h2>Lista de endereços</h2>
+        {{#each user.addresses}}
+            <p>#{{this.id}} - {{this.street}} - {{this.number}} - {{this.city}}</p>
+        {{/each}}
+    </div>
 </div>
