--- a/9_SEQUELIZE/11_resgatando_relacionados/views/useredit.handlebars
+++ b/9_SEQUELIZE/11_resgatando_relacionados/views/useredit.handlebars
@@ -42,7 +42,7 @@
     </form>
     <div class="address-list">
         <h2>Lista de endereços</h2>
-        {{#each user.addresses}}
+        {{#each user.Addresses}}
             <p>#{{this.id}} - {{this.street}} - {{this.number}} - {{this.city}}</p>
         {{/each}}
     </div>
