--- a/9_SEQUELIZE/12_remover_relacionados/views/useredit.handlebars
+++ b/9_SEQUELIZE/12_remover_relacionados/views/useredit.handlebars
@@ -7,7 +7,7 @@
     </div>
     <div class="form-control">
         <label for="occupation">Profissão:</label>
-        <input type="text" name="occupation" placeholder="Digite a profissão" value="{{user.occupation}}">      
+        <input type="text" name="occupation" placeholder="Digite a profissão" value="{{user.occupation}}">
     </div>
     <div class="form-control form-checkbox">
         {{#if user.newsletter}}
@@ -43,7 +43,16 @@
     <div class="address-list">
         <h2>Lista de endereços</h2>
         {{#each user.Addresses}}
-            <p>#{{this.id}} - {{this.street}} - {{this.number}} - {{this.city}}</p>
+        <div>#{{this.id}} -
+            {{this.street}} -
+            {{this.number}} -
+            {{this.city}}
+        <form action="/address/delete" method="POST">
+            <input type="hidden" name="UserId" value="{{this.UserId}}">
+            <input type="hidden" name="id" value="{{this.id}}">
+            <input type="submit" value="Excluir">
+        </form>
+        </div>
         {{/each}}
     </div>
 </div>
